# trajgenpy

./: CMakeLists.txt
examples/: coverage_and_plotting.py
trajgenpy/: Query.py  Utils.py
